fix(govdata): use pattern from metadata for reference_regional_linecodes paths
Fix loadRegionalLineCodeCatalog() and convertRegionalLineCodeCatalog() to extract
the pattern from table metadata instead of incorrectly using the table name.

This fixes the warning 'Pattern does not end with .parquet: reference_regional_linecodes'
and the S3 NoSuchKey errors that occurred when trying to read/write the catalog files.

The pattern 'type=reference/tablename=*/reference_regional_linecodes.parquet' is now
properly resolved with variables to create valid file paths.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>